[workspace]
resolver = "3"
members = ["heos"]

[workspace.package]
edition = "2024"
authors = ["James De Broeck <debroejm@gmail.com>"]
license = "BSD-2-Clause-Patent"
repository = "https://github.com/debroejm/heos-rs"

[workspace.dependencies]
ahash = "0.8.12"
educe = "0.6.0"
parking_lot = "0.12.4"
qstring = "0.7.2"
serde = "1.0"
serde_json = "1.0"
serde_qs = "1.0.0-rc.3"
ssdp-client = "2.1"
strum = { version = "0.27", features = ["derive"]}
thiserror = "2.0"
tokio = { version = "1.47", features = ["io-util", "macros", "net", "rt", "sync"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
url = { version = "2.5", features = ["serde"] }

[workspace.dependencies.heos]
version = "0.1"
path = "heos"
